--- a/src/main/resources/com/example/chaossimulator/simulation-view.fxml
+++ b/src/main/resources/com/example/chaossimulator/simulation-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -14,9 +15,12 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="518.0" prefWidth="760.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chaossimulator.SimulatorWindowController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="577.0" prefWidth="815.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chaossimulator.SimulatorWindowController">
    <center>
-      <AnchorPane fx:id="simulationPane" prefHeight="232.0" prefWidth="377.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER" />
+      <AnchorPane fx:id="simulationPane" prefHeight="232.0" prefWidth="377.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
+         <children>
+            <Canvas fx:id="curveCanvas" height="502.0" width="815.0" />
+         </children></AnchorPane>
    </center>
    <top>
       <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="74.0" prefWidth="600.0" BorderPane.alignment="CENTER">
