--- a/src/main/resources/com/example/chaossimulator/add-object-view.fxml
+++ b/src/main/resources/com/example/chaossimulator/add-object-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ButtonType?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.DialogPane?>
@@ -10,54 +11,53 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="298.0" prefWidth="385.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chaossimulator.AddObjectController">
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="314.0" prefWidth="482.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chaossimulator.AddObjectController">
     <expandableContent>
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0" />
     </expandableContent>
    <content>
       <GridPane>
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="244.33338928222656" minWidth="10.0" prefWidth="138.00002797444662" />
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="244.33338928222656" minWidth="10.0" prefWidth="138.00002797444662" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="349.99998474121094" minWidth="10.0" prefWidth="271.3333053588867" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Color:" />
-            <Label text="Position:" GridPane.rowIndex="1" />
-            <Label text="Velocity:" GridPane.rowIndex="2" />
-            <Label text="Acceleration:" GridPane.rowIndex="3" />
+            <Label text="Color:">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin></Label>
+            <Label text="Position:" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin></Label>
+            <Label text="Velocity:" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin></Label>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Label layoutX="14.0" layoutY="26.0" text="X " />
-                  <Label layoutX="98.0" layoutY="26.0" text="Y " />
-                  <TextField layoutX="25.0" layoutY="22.0" prefHeight="25.0" prefWidth="47.0" fx:id="xPositionField" />
-                  <TextField fx:id="yPositionField" layoutX="108.0" layoutY="22.0" prefHeight="25.0" prefWidth="47.0" />
+                  <Label layoutX="20.0" layoutY="28.0" text="X " />
+                  <Label layoutX="120.0" layoutY="28.0" text="Y " />
+                  <TextField layoutX="30.0" layoutY="24.0" prefHeight="25.0" prefWidth="47.0" fx:id="xPositionField" />
+                  <TextField fx:id="yPositionField" layoutX="132.0" layoutY="24.0" prefHeight="25.0" prefWidth="47.0" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <Label layoutX="14.0" layoutY="20.0" text="X " />
-                  <Label layoutX="98.0" layoutY="20.0" text="Y " />
-                  <TextField layoutX="25.0" layoutY="16.0" prefHeight="25.0" prefWidth="47.0" fx:id="xVelocityField" />
-                  <TextField fx:id="yVelocityField" layoutX="108.0" layoutY="16.0" prefHeight="25.0" prefWidth="47.0" />
+                  <Label layoutX="20.0" layoutY="20.0" text="X " />
+                  <Label layoutX="120.0" layoutY="20.0" text="Y " />
+                  <TextField layoutX="30.0" layoutY="16.0" prefHeight="25.0" prefWidth="47.0" fx:id="xVelocityField" />
+                  <TextField fx:id="yVelocityField" layoutX="132.0" layoutY="16.0" prefHeight="25.0" prefWidth="47.0" />
                </children>
             </AnchorPane>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <children>
-                  <Label layoutX="14.0" layoutY="25.0" text="X " />
-                  <Label layoutX="98.0" layoutY="25.0" text="Y " />
-                  <TextField layoutX="25.0" layoutY="21.0" prefHeight="25.0" prefWidth="47.0" fx:id="xAccelerationField" />
-                  <TextField fx:id="yAccelerationField" layoutX="108.0" layoutY="21.0" prefHeight="25.0" prefWidth="47.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
-               <children>
-                  <ColorPicker fx:id="objectColorPicker" layoutX="14.0" layoutY="22.0" prefHeight="25.0" prefWidth="141.0" />
+                  <ColorPicker fx:id="objectColorPicker" layoutX="14.0" layoutY="28.0" prefHeight="25.0" prefWidth="200.0" />
                </children>
             </AnchorPane>
          </children>
