--- a/src/main/resources/com/example/chaossimulator/simulation-view.fxml
+++ b/src/main/resources/com/example/chaossimulator/simulation-view.fxml
@@ -2,78 +2,41 @@
 
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="577.0" prefWidth="815.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chaossimulator.SimulatorWindowController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="666.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chaossimulator.SimulatorWindowController">
    <center>
-      <AnchorPane fx:id="simulationPane" prefHeight="232.0" prefWidth="377.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
+      <AnchorPane fx:id="simulationPane" prefHeight="232.0" prefWidth="377.0" style="-fx-background-color: #2b2b2b;" BorderPane.alignment="CENTER">
          <children>
-            <Canvas fx:id="curveCanvas" height="502.0" width="815.0" />
+            <Canvas fx:id="curveCanvas" height="595.0" width="1000.0" />
          </children></AnchorPane>
    </center>
    <top>
-      <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="74.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <SplitPane orientation="VERTICAL" prefHeight="74.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <items>
-            <MenuBar>
-              <menus>
-                <Menu mnemonicParsing="false" text="File">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="New" />
-                        <MenuItem mnemonicParsing="false" text="Open..." />
-                        <MenuItem mnemonicParsing="false" text="Save" />
-                        <MenuItem mnemonicParsing="false" text="Save as..." />
-                        <MenuItem mnemonicParsing="false" text="Quit" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                  <Menu mnemonicParsing="false" text="Simulation">
-                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#onSimulate" text="Simulate" />
-                        <MenuItem mnemonicParsing="false" onAction="#onSimulate" text="Stop" />
-                        <MenuItem mnemonicParsing="false" onAction="#onAddNewObject" text="Add objects..." />
-                        <MenuItem mnemonicParsing="false" text="Add object series..." />
-                        <MenuItem mnemonicParsing="false" text="Add shape..." />
-                     </items>
-                  </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
-                  </items>
-                </Menu>
-              </menus>
-            </MenuBar>
             <GridPane>
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="119.6666488647461" minWidth="10.0" prefWidth="38.333309173583984" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="215.66669082641602" minWidth="10.0" prefWidth="150.0000152587891" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.99998474121094" minWidth="10.0" prefWidth="36.66672261555988" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="266.66661071777344" minWidth="10.0" prefWidth="266.66661071777344" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="265.99998474121094" minWidth="10.0" prefWidth="300.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="223.00004069010413" minWidth="4.666659037272126" prefWidth="175.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="186.99998474121094" minWidth="0.0" prefWidth="175.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="266.66661071777344" minWidth="10.0" prefWidth="175.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="175.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Slider fx:id="velocitySlider" blockIncrement="1.0" max="10.0" showTickMarks="true" GridPane.columnIndex="1" />
-                  <Label text="Velocity:" />
-                  <TextField fx:id="velocityInputText" prefHeight="25.0" prefWidth="85.0" GridPane.columnIndex="2" />
-                  <Button fx:id="simulationButton" mnemonicParsing="false" onAction="#onSimulate" prefHeight="25.0" prefWidth="109.0" text="Simulate" GridPane.columnIndex="5" />
+                  <Button fx:id="simulationButton" mnemonicParsing="false" onAction="#onSimulate" prefHeight="30.0" prefWidth="150.0" text="Simulate" GridPane.columnIndex="4" />
+                  <Button mnemonicParsing="false" onAction="#onAddNewObject" prefHeight="30.0" prefWidth="150.0" text="Aggiungi corpo" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Aggiungi serie" GridPane.columnIndex="2" />
+                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Reset" GridPane.columnIndex="3" />
+                  <ChoiceBox fx:id="chCurve" prefHeight="30.0" prefWidth="250.0" />
                </children>
             </GridPane>
          </items>
