Fixed the stop, restart and resume functionalities. Modified the constructors of the BouncingSprite class so that now every object created is going to be a Circle with a fixed radius (constant in BallsSettings) and a fixed acceleration (constant in BallsSettings). Lastly, I worked on the add object dialog pane, rewriting some methods and adding the code for the ColorPicker.

--- a/src/main/resources/com/example/chaossimulator/simulation-view.fxml
+++ b/src/main/resources/com/example/chaossimulator/simulation-view.fxml
@@ -12,7 +12,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="666.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chaossimulator.SimulatorWindowController">
    <center>
-      <AnchorPane fx:id="simulationPane" prefHeight="232.0" prefWidth="377.0" style="-fx-background-color: #2b2b2b;" BorderPane.alignment="CENTER">
+      <AnchorPane fx:id="simulationPane" prefHeight="232.0" prefWidth="377.0" style="-fx-background-color: #031517;" BorderPane.alignment="CENTER">
          <children>
             <Canvas fx:id="curveCanvas" height="595.0" width="1000.0" />
          </children></AnchorPane>
@@ -33,9 +33,9 @@
               </rowConstraints>
                <children>
                   <Button fx:id="simulationButton" mnemonicParsing="false" onAction="#onSimulate" prefHeight="30.0" prefWidth="150.0" text="Simulate" GridPane.columnIndex="4" />
-                  <Button mnemonicParsing="false" onAction="#onAddNewObject" prefHeight="30.0" prefWidth="150.0" text="Aggiungi corpo" GridPane.columnIndex="1" />
-                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Aggiungi serie" GridPane.columnIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Reset" GridPane.columnIndex="3" />
+                  <Button mnemonicParsing="false" onAction="#onAddNewObject" prefHeight="30.0" prefWidth="150.0" text="Add object" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Add series" GridPane.columnIndex="2" />
+                  <Button mnemonicParsing="false" onAction="#restartSimulation" prefHeight="30.0" prefWidth="150.0" text="Reset" GridPane.columnIndex="3" />
                   <ChoiceBox fx:id="chCurve" prefHeight="30.0" prefWidth="250.0" />
                </children>
             </GridPane>
