--- a/src/main/resources/com/example/chaossimulator/add-object-view.fxml
+++ b/src/main/resources/com/example/chaossimulator/add-object-view.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="314.0" prefWidth="482.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chaossimulator.AddObjectController">
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chaossimulator.AddObjectController">
     <expandableContent>
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0" />
     </expandableContent>
@@ -43,16 +43,16 @@
                <children>
                   <Label layoutX="20.0" layoutY="28.0" text="X " />
                   <Label layoutX="120.0" layoutY="28.0" text="Y " />
-                  <TextField layoutX="30.0" layoutY="24.0" prefHeight="25.0" prefWidth="47.0" fx:id="xPositionField" />
-                  <TextField fx:id="yPositionField" layoutX="132.0" layoutY="24.0" prefHeight="25.0" prefWidth="47.0" />
+                  <TextField layoutX="30.0" layoutY="24.0" prefHeight="25.0" prefWidth="50.0" fx:id="xPositionField" />
+                  <TextField fx:id="yPositionField" layoutX="132.0" layoutY="24.0" prefHeight="25.0" prefWidth="50.0" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
                   <Label layoutX="20.0" layoutY="20.0" text="X " />
                   <Label layoutX="120.0" layoutY="20.0" text="Y " />
-                  <TextField layoutX="30.0" layoutY="16.0" prefHeight="25.0" prefWidth="47.0" fx:id="xVelocityField" />
-                  <TextField fx:id="yVelocityField" layoutX="132.0" layoutY="16.0" prefHeight="25.0" prefWidth="47.0" />
+                  <TextField layoutX="30.0" layoutY="16.0" prefHeight="25.0" prefWidth="50.0" fx:id="xVelocityField" />
+                  <TextField fx:id="yVelocityField" layoutX="132.0" layoutY="16.0" prefHeight="25.0" prefWidth="50.0" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
@@ -66,5 +66,6 @@
    <buttonTypes>
       <ButtonType fx:constant="OK" />
       <ButtonType fx:constant="CANCEL" />
+      <ButtonType fx:constant="APPLY" />
    </buttonTypes>
 </DialogPane>
